--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "scripts": {
     "build": "tsc",
+    "watch-ts": "tsc -w",
+    "watch-node": "nodemon dist/index.js",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript, Node\" -c \"yello.bold, cyan.bold\" \"yarn run watch-ts\" \"yarn run watch-node\"",
     "start": "npm run build && nodemon dist/index.js"
   },
   "repository": {
@@ -19,11 +22,15 @@
   "license": "ISC",
   "homepage": "https://github.com/dcx86/full-stack-chat-server#readme",
   "dependencies": {
+    "concurrently": "^5.0.2",
     "express": "^4.17.1",
+    "socket.io": "^2.3.0",
+    "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.7.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/socket.io": "^2.1.4",
     "tslint": "^5.20.1"
   }
 }
